--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -1145,8 +1145,8 @@
 
 
 
-        let $autoconf_path = getenv('PREVARISC_IGN_AUTOCONF');
-        $autoconf_path = file_exists($public_dir.$autoconf_path) ? $autoconf_path : "";
+        <?= $autoconf_path = getenv('PREVARISC_IGN_AUTOCONF') ?>
+        <?= $autoconf_path = file_exists($public_dir.$autoconf_path) ? $autoconf_path : ""; ?>
         /* TEST */
         const optionsGeo = {
             key_ign: <?= $this->key_ign ?>,
