Variabilisation des modals

--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -1030,137 +1030,31 @@
             $(`#${modalId} input[name='numero'], #${modalId} input[name='complement']`).val("").attr("disabled", true).blur();
         });
 
-        $('#adresse-modal-ajout').on('shown.bs.modal', function () {
-            if($('#adresse-modal-ajout .modal-body').scrollTop() !== 0) {
-                $('#adresse-modal-ajout .modal-body').scrollTop(0);
-            }
-
-            $('#adresse-modal-ajout input').val('');
-            $("#adresse-modal-ajout input[name='voie_ac'], #adresse-modal-ajout input[name='numero'], #adresse-modal-ajout input[name='complement']").val("").attr("disabled", true).blur();
-            $("span.result").text("Inconnu");
-            $('#geoportail-container').css('visibility', 'hidden');
-
-            // Si une carto est déjà présente, on n'en charge pas une autre
-            if($('#geoportail-container .ol-viewport').length == 0) {
-                // On empêche le clic sur la géolocalisation jusqu'à ce que la carto soit chargée
-                $('#adresse-modal-ajout #geolocme').attr('disabled', true);
-                $('#adresse-modal-ajout #geolocme_nominatim').attr('disabled', true);
-
-                /***** Carte IGN *****/
-                <?php if ($this->key_ign != null): ?>
-                    <?php
-                        $public_dir = $_SERVER['DOCUMENT_ROOT'];
-                        $autoconf_path = getenv('PREVARISC_IGN_AUTOCONF');
-                        $autoconf_path = file_exists($public_dir.$autoconf_path) ? $autoconf_path : "";
-                    ?>
-
-                    viewer = initViewer('geoportail-container',
-                                        '<?php echo $this->key_ign ?>',
-                                        [<?php echo $this->default_lon ?>, <?php echo $this->default_lat ?>],
-                                        '<b>Centre par défaut</b>',
-                                        '<?php echo $autoconf_path ?>');
-
-                    viewer.listen('mapLoaded', afterInitMap);
-                    viewer.listen('azimuthChanged', onRotation);
-
-                    function afterInitMap () {
-                        // Ajout du bouton FullScreen sur la carte
-                        var fsControl = new ol.control.FullScreen({});
-                        viewer.getLibMap().addControl(fsControl);
-
-                        // Ajout des couches utilisateur
-                        viewer = addUserLayers(viewer,
-                                               <?php echo json_encode($this->couches_cartographiques) ?>);
-                        nbCouches = viewer.getLibMap().getLayers().getLength();
-
-                        // On enlève le marker par défaut, les outils de mesures, et le reset d'orientation
-                        $('.ol-overlay-container').css('display', 'none');
-                        $('div[id^=GPtoolbox-measure-main-]').css('display', 'none');
-                        $('.ol-rotate').css('display', 'none');
-
-                        $('#adresse-modal-ajout #geolocme').removeAttr('disabled');
-                        $('#adresse-modal-ajout #geolocme_nominatim').removeAttr('disabled');
-                    };
-
-                    function onRotation () {
-                        viewer.getAzimuth() === 0 ? $('.ol-rotate').css('display', 'none') : $('.ol-rotate').css('display', 'block');
-                    };
-
-                    viewer.getLibMap().on('singleclick', function(evt) {
-                        lonlat = updateCoordinates(evt.coordinate, 'EPSG:3857', 'EPSG:4326');
-                        putMarkerAt(viewer.getLibMap(), lonlat, nbCouches);
-                    });
-
-                    $('#adresse-modal-ajout #geolocme').click(function(e) {
-                        e.preventDefault();
-
-                        var adresse = "";
-                        var numero = $("input[name='numero']").val().trim();
-                        var voie = $("input[name='voie_ac']").val().trim();
-                        var codepostal = $("input[name='code_postal']").val();
-                        var commune = $("input[name='commune_ac']").val().replace(/\(.*\)/g, '');
-
-                        if (!commune) {
-                            $("span.result").text("Pas de commune renseignée");
-                            return false;
-                        }
-
-                        if (!voie) {
-                            $("span.result").text("Pas de voie renseignée");
-                            return false;
-                        }
-
-                        if (numero) {
-                            adresse += numero + ", ";
-                        }
-
-                        // On regarde si la voie contient une commune entre parenthèses
-                        var regExp = /\(([^)]+)\)/;
-                        var matches = regExp.exec(voie);
-
-                        if (matches) {
-                            // matches[1] contient la valeur entre parenthèses
-                            commune = matches[1];
-
-                            // On retire la commune de la voie
-                            voie = voie.split(regExp)[0].trim();
-                        }
-
-                        adresse += voie + ", " + codepostal +  ", " + commune;
-
-                        $("span.result").text("Géolocalisation en cours...");
-                        geocodeWithJsAutoconf(
-                            adresse,
-                            'StreetAddress',
-                            'EPSG:4326',
-                            viewer,
-                            nbCouches
-                        );
-
-                        return false;
-                    });
-                <?php endif ?>
-            }
-        });
-
-
-
-
-        <?php
+        <?php if ($this->key_ign != null):
+            $public_dir = $_SERVER['DOCUMENT_ROOT'];
             $autoconf_path = getenv('PREVARISC_IGN_AUTOCONF');
             $autoconf_path = file_exists($public_dir.$autoconf_path) ? $autoconf_path : "";
         ?>
 
-        const optionsGeo = {
-            key_ign: <?= $this->key_ign ?>,
-            default_lat:<?= $this->default_lat ?>,
-            default_lon:<?= $this->default_lon ?>,
-            autoconf_path:<?= $autoconf_path ?>,
-            couches_cartographiques:<?= json_encode($this->couches_cartographiques) ?>
-        }
+            const optionsGeo = {
+                geo_container_id: '',
+                key_ign: '<?= $this->key_ign ?>',
+                default_lat: <?= $this->default_lat ?>,
+                default_lon: <?= $this->default_lon ?>,
+                autoconf_path: '<?= $autoconf_path ?>',
+                couches_cartographiques: <?= json_encode($this->couches_cartographiques) ?>
+            }
+        <?php endif ?>
 
-        //geolocaliseIGN("#adresse-modal-ajout", optionsGeo)
-        //geolocaliseIGN("#adresse-modal-edit", optionsGeo)
+        $('#adresse-modal-ajout').on('shown.bs.modal', function () {
+            optionsGeo.geo_container_id = 'geoportail-container'
+            geolocaliseIGN("#adresse-modal-ajout", optionsGeo)
+        })
+
+        $('#adresse-modal-edit').on('shown.bs.modal', function () {
+            optionsGeo.geo_container_id = 'edit-geoportail-container'
+            geolocaliseIGN("#adresse-modal-edit", optionsGeo)
+        })
 
          //Appelle ajax + modification du modal
          $('.modifierAdresse').click(function (e) {
