--- a/application/views/scripts/etablissement/partials/partial-modal-edit-adresse.phtml
+++ b/application/views/scripts/etablissement/partials/partial-modal-edit-adresse.phtml
@@ -58,7 +58,7 @@
             </dd>
         </dl>
         <?php if ($this->key_ign != null): ?>
-            <div id="geoportail-container" style="height: 400px;"></div>
+            <div id="edit-geoportail-container" style="height: 400px;"></div>
 
             <!-- Déplacement du bouton FullScreen (sinon supperposé avec le gestionnaire de couches) -->
             <style>
