Meilleur affichage des champs de fusion d'un tableau

--- a/public/css/formulaire/formulaire.css
+++ b/public/css/formulaire/formulaire.css
@@ -8,6 +8,7 @@ form #save-element {
 .champFusionTable {
     margin: 0;
     border-color: black;
+    word-wrap: anywhere;
 }
 .champFusionTable td {
     border-color: black;
