Libellés plus descriptifs

--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -17,7 +17,7 @@
                     <th>Nom</th>
                     <th>Description</th>
                     <th>Date d'ajout</th>
-                    <th>Envoyer vers Plat'AU</th>
+                    <th>Statut Plat'AU</th>
                     <th></th>
                 </tr>
             </thead>
@@ -29,7 +29,7 @@
         </table>
     </div>
 
-    <input id="export-platau" type="button" class="btn btn-success pull-right" value="Sauvegarder" />
+    <input id="export-platau" type="button" class="btn btn-success pull-right" value="Envoyer vers Plat'AU" />
 </form>
 
 <script type="text/javascript">
