--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1166,6 +1166,7 @@ $("#validModification").live('click', function() {
         $("#addNumDoc").click();
     }
 
+    // TODO Mettre un name contenant l'ID de la PJ et filtrer dans l'action de sauvegarde
     var data = $("#editDossier").serialize();
     $.ajax({
         url: "/dossier/save",
@@ -1211,7 +1212,53 @@ $(".delaipresc").live('click', function() {
         $("#delaipresc_form").hide();
     }
 });
+
+function afficheInfosPlatau(parentRow) {
+    $.post(
+        '/piece-jointe/display-pj-platau',
+        { idDossier: $('#idDossier').val() },
+        function(data) {
+            parentRow.after(data)
+        }
+    )
+    $('.label.label-warning').removeClass('ui-helper-hidden')
+}
+
+function masqueInfosPlatau() {
+    $('#PIECESJOINTES').remove()
+    $('.label.label-warning').addClass('ui-helper-hidden')
+}
+
+$('.incomplet').live('click', function() {
+    afficheInfosPlatau($('#INCOMPLET'))
+})
+$('.cancelIncomplet').live('click', function() {
+    masqueInfosPlatau()
+})
+
+$('#AVIS_DOSSIER_COMMISSION').live('change', function() {
+    const avis = $('#AVIS_DOSSIER_COMMISSION').val()
+    const infosPlatauExists = !!document.getElementById('PIECESJOINTES')
+
+    if (avis !== '0') {
+        if (!infosPlatauExists) {
+            afficheInfosPlatau($('#AVIS_COMMISSION'))
+        }
+    } else {
+        masqueInfosPlatau()
+    }
+})
+
+$('#select-platau').live('click', function(e) {
+    e.preventDefault()
+    document.getElementById('PIECESJOINTES').scrollIntoView()
+    $('#PIECESJOINTES').focus()
+})
 </script>
+
+<span class="label label-warning ui-helper-hidden">
+    N'oubliez pas de <a href="#" id="select-platau">sélectionner les documents</a> à envoyer vers Plat'AU
+</span>
 
 <?php
 	$action = $this->do;
@@ -2238,7 +2285,7 @@ $(".delaipresc").live('click', function() {
                 </div>
                 <div class='right form span9' <?php echo ($action != 'new') ? "style='display:none;'" : "" ?>>
                     <ul class='unstyled'>
-                        <li style='liste-style-type:none' id='liste_prev'>
+                        <li style='list-style-type:none' id='liste_prev'>
                             <?php if (count($this->preventionnistes) > 0) :
 								foreach ($this->preventionnistes as $prev) : ?>
 								<span class='ui-state-highlight'
