--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -26,7 +26,7 @@
             <td class="checkbox">
                 <?php switch ($pj['NOM_STATUT']):
                     case 'not_exported': ?>
-                        <input type="checkbox" name="export-pj-platau" data-id="<?= $pj['ID_PIECEJOINTE'] ?>" value="0" />
+                        <input type="checkbox" name="export-pj-platau" data-id="<?= $pj['ID_PIECEJOINTE'] ?>" value="0" disabled />
                 <?php break;
                     case 'to_be_exported': ?>
                         <div class="label label-info">En attente d'envoi</div>
