--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -243,16 +243,23 @@ $(document).ready(function() {
         $("#InfosDossier > li").hide();
         $("#creationDossier").hide();
         $(".docurba").remove();
+
         if (idType == 0) {
             $("#nature").hide();
         } else {
             //Modif de la dénomination de l'avis
             if (idType == 1 || idType == 2) {
-                //dans le cas d'une étude
+                //dans le cas d'une étude ou d'une visite
                 $("#AVIS_DOSSIER").parent().prev().prev().html("Avis du rapporteur");
             } else if (idType == 3) {
-                //cas d'une visite ou d'un groupe de visite
+                //cas d'un groupe de visite
                 $("#AVIS_DOSSIER").parent().prev().prev().html("Avis du groupe de visite");
+            }
+
+            if (idType == 1) {
+                gestionAffichageInfosPlatau()
+            } else {
+                gestionMasquageInfosPlatau()
             }
 
             $.ajax({
@@ -1014,8 +1021,66 @@ $("#modificationDossier").live('click', function() {
 
     //Gestion des cas calendrier comm visite en fonction du type de dossier
     $(".hideCalendar").hide();
+
+    if ($('#TYPE_DOSSIER').val() === '1') {
+        gestionAffichageInfosPlatau()
+    }
+
     return false;
 });
+
+function gestionAffichageInfosPlatau() {
+    $('.incomplet').live('click.platau', function() {
+        afficheInfosPlatau($('#INCOMPLET'))
+    })
+    $('.cancelIncomplet').live('click.platau', function() {
+        masqueInfosPlatau()
+    })
+
+    $('#AVIS_DOSSIER_COMMISSION').live('change.platau', function() {
+        const avis = $('#AVIS_DOSSIER_COMMISSION').val()
+        const infosPlatauExists = !!document.getElementById('PIECESJOINTES')
+
+        if (avis !== '0') {
+            if (!infosPlatauExists) {
+                afficheInfosPlatau($('#AVIS_COMMISSION'))
+            }
+        } else {
+            masqueInfosPlatau()
+        }
+    })
+
+    $('#select-platau').live('click.platau', function(e) {
+        e.preventDefault()
+        document.getElementById('PIECESJOINTES').scrollIntoView()
+        $('#PIECESJOINTES').focus()
+    })
+}
+
+function gestionMasquageInfosPlatau() {
+    $('.incomplet').die('click.platau')
+    $('.cancelIncomplet').die('click.platau')
+    $('#AVIS_DOSSIER_COMMISSION').die('change.platau')
+    $('#select-platau').die('click.platau')
+}
+
+function afficheInfosPlatau(parentRow) {
+    $.post(
+        '/piece-jointe/display-pj-platau',
+        { idDossier: $('#idDossier').val() },
+        function(data) {
+            if ('' !== data) {
+                parentRow.after(data)
+                $('.label.label-warning').removeClass('ui-helper-hidden')
+            }
+        }
+    )
+}
+
+function masqueInfosPlatau() {
+    $('#PIECESJOINTES').remove()
+    $('.label.label-warning').addClass('ui-helper-hidden')
+}
 
 //Selection d'une nature et affichage des champs en fonction de la ou des natures
 $("#selectNature").live('change', function() {
@@ -1211,49 +1276,6 @@ $(".delaipresc").live('click', function() {
         $("#delaipresc_form").hide();
     }
 });
-
-// TODO Il faut mettre un filtre sur le type => Etude
-function afficheInfosPlatau(parentRow) {
-    $.post(
-        '/piece-jointe/display-pj-platau',
-        { idDossier: $('#idDossier').val() },
-        function(data) {
-            parentRow.after(data)
-        }
-    )
-    $('.label.label-warning').removeClass('ui-helper-hidden')
-}
-
-function masqueInfosPlatau() {
-    $('#PIECESJOINTES').remove()
-    $('.label.label-warning').addClass('ui-helper-hidden')
-}
-
-$('.incomplet').live('click', function() {
-    afficheInfosPlatau($('#INCOMPLET'))
-})
-$('.cancelIncomplet').live('click', function() {
-    masqueInfosPlatau()
-})
-
-$('#AVIS_DOSSIER_COMMISSION').live('change', function() {
-    const avis = $('#AVIS_DOSSIER_COMMISSION').val()
-    const infosPlatauExists = !!document.getElementById('PIECESJOINTES')
-
-    if (avis !== '0') {
-        if (!infosPlatauExists) {
-            afficheInfosPlatau($('#AVIS_COMMISSION'))
-        }
-    } else {
-        masqueInfosPlatau()
-    }
-})
-
-$('#select-platau').live('click', function(e) {
-    e.preventDefault()
-    document.getElementById('PIECESJOINTES').scrollIntoView()
-    $('#PIECESJOINTES').focus()
-})
 </script>
 
 <span class="label label-warning ui-helper-hidden">
