--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1055,6 +1055,14 @@ function gestionAffichageInfosPlatau() {
         document.getElementById('PIECESJOINTES').scrollIntoView()
         $('#PIECESJOINTES').focus()
     })
+
+    if ($('#statut-pec').hasClass('label-warning')) {
+        afficheInfosPlatau($('#INCOMPLET'))
+    }
+
+    if ($('#statut-avis').hasClass('label-warning')) {
+        afficheInfosPlatau($('#AVIS_COMMISSION'))
+    }
 }
 
 function gestionMasquageInfosPlatau() {
