Nom plus explicite

--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -14,7 +14,7 @@
 <div id='formAddPJ' title='Ajouter une pièce jointe' class='ui-helper-hidden' ></div>
 
 <?php if(!empty($this->listePj)) :?>
-    <button id='btnDownload' class='btn btn-success'>Tout télécharger</button>
+    <button id='btnDownload' class='btn btn-success'>Télécharger les pièces jointes</button>
 <?php endif ?>
 
 
