--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -1,7 +1,6 @@
 <input type='hidden' name='typePJ' id='typePJ' value='<?php echo $this->type ?>' />
 <input type='hidden' name='idLinkPJ' id='idLinkPJ' value='<?php echo $this->identifiant ?>' />
 
-
 <h3>Liste de pièces jointes
 <?php
 	echo "
@@ -14,9 +13,8 @@
 <div id='formAddPJ' title='Ajouter une pièce jointe' class='ui-helper-hidden' ></div>
 
 <?php if(!empty($this->listePj)) :?>
-    <button id='btnDownload' class='btn btn-success'>Télécharger les pièces jointes</button>
+    <a href="/dossier/get-zip-all-pj/id/<?= $this->identifiant ?>" class="btn btn-success">Télécharger les pièces jointes</a>
 <?php endif ?>
-
 
 <div id='listePieceJointe' class='<?php if(count($this->listePj)==0) echo "ui-helper-hidden"?>' >
 	<table id='tabPieceJointe' class='table table-striped'>
@@ -36,8 +34,7 @@
 </div>
 
 <script type="text/javascript">
-
-        Dropzone.autoDiscover = false;
+    Dropzone.autoDiscover = false;
 
 	$(document).ready(function() {
 		$("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' >");
@@ -146,7 +143,6 @@
 
                 },
                 success: function(affichageResultat){
-                    //alert(checked);
                     if(checked == true){
                         $(".select").each(function(){
                             $(this).attr('disabled','disabled');
@@ -216,9 +212,4 @@
 			}
 		});
 	}
-
-    $('#btnDownload').live("click", function() {
-        location.href = "/dossier/get-zip-all-pj/id/" + $("#idDossier").val()
-    })
-
 </script>
