--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -1,7 +1,6 @@
 <input type='hidden' name='typePJ' id='typePJ' value='<?php echo $this->type ?>' />
 <input type='hidden' name='idLinkPJ' id='idLinkPJ' value='<?php echo $this->identifiant ?>' />
 
-
 <h3>Liste de pièces jointes
 <?php
 	echo "
@@ -13,28 +12,30 @@
 </h3>
 <div id='formAddPJ' title='Ajouter une pièce jointe' class='ui-helper-hidden' ></div>
 
+<?php if(!empty($this->listePj)) :?>
+    <a href="/dossier/get-zip-all-pj/id/<?= $this->identifiant ?>" class="btn btn-success">Télécharger les pièces jointes</a>
+<?php endif ?>
+
 <div id='listePieceJointe' class='<?php if(count($this->listePj)==0) echo "ui-helper-hidden"?>' >
-	<table id='tabPieceJointe' class='table table-striped'> 
-		<thead> 
+	<table id='tabPieceJointe' class='table table-striped'>
+		<thead>
 			<tr>
-				<th>Nom</th> 
+				<th>Nom</th>
 				<th>Description</th>
 				<th>Date d'ajout</th>
-				<th></th>
-			</tr> 
-		</thead> 
+			</tr>
+		</thead>
 		<tbody>
-		<?php 
-			echo $this->partial("piece-jointe/display.phtml", array("path" => $this->path, "listePj" => $this->listePj, "type" => $this->type, "id" => $this->identifiant, "verrou" => $this->verrou)) 
+		<?=
+			$this->partial("piece-jointe/display.phtml", array("path" => $this->path, "listePj" => $this->listePj, "type" => $this->type, "id" => $this->identifiant, "verrou" => $this->verrou))
 		?>
 		</tbody>
 	</table>
 </div>
 
 <script type="text/javascript">
-        
-        Dropzone.autoDiscover = false;
-        
+    Dropzone.autoDiscover = false;
+
 	$(document).ready(function() {
 		$("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' >");
 
@@ -60,10 +61,10 @@
 							'Ajouter la pièce jointe': function() {
 								// Envoi du formulaire dans form
 								$("#formUpload").submit();
-								
+
 								// On ferme la boite de dialogue
-								$(this).dialog('close'); 
-								
+								$(this).dialog('close');
+
 								// On ouvre la barre de chargement
 								$("<div id='load' style='text-align: center'><img src='/images/bar.gif' alt='Upload en cours' /></div>").dialog({
 									resizable: false,
@@ -78,13 +79,13 @@
 				}
 			});
 		});
-                
+
 		/* GESTION DU GLISSEZ DEPOSER */
 		$("#addPJQuick").click(function() {
 			$('#dropzone').toggle();
 		});
-		
-		var myDropzone = new Dropzone("#dropzone", { 
+
+		var myDropzone = new Dropzone("#dropzone", {
 			url: "/piece-jointe/add?id=" + $("#idLinkPJ").val() + "&type=" + $("#typePJ").val(),
 			paramName: "fichier"
 		});
@@ -121,14 +122,14 @@
 				return false;
 			}
 		});
-		
+
         $('a[href$=png], a[href$=jpg], a[href$=jpeg]').fancybox({
             'transitionIn'	:	'elastic',
             'transitionOut'	:	'elastic',
-            'speedIn'		:	600, 
-            'speedOut'		:	200, 
+            'speedIn'		:	600,
+            'speedOut'		:	200,
         });
-        
+
         $(".select").live('click',function(){
             var idAvantSplit = $(this).attr('id');
             var tabId = idAvantSplit.split('_');
@@ -139,10 +140,9 @@
                 data: "do=pjPassageCommission&idPjCommission="+id+"&idDossier="+$("#idDossier").val()+"&checked="+checked,
                 type:"POST",
                 beforeSend: function(){
-                    
+
                 },
                 success: function(affichageResultat){
-                    //alert(checked);
                     if(checked == true){
                         $(".select").each(function(){
                             $(this).attr('disabled','disabled');
@@ -160,28 +160,28 @@
                 }
             });
         });
-        
+
         function disabledTest(){
             var test = 0;
             $(".select").each(function(){
                 if($(this).attr('checked')){
                     test = 1;
                 }
-                
+
             });
             if(test == 1){
                 $(".select").each(function(){
                     if(!$(this).attr('checked')){
                         $(this).attr('disabled','disabled');
-                    }			
+                    }
                 });
             }
-        
+
         }
         disabledTest();
-		
+
 	});
-	
+
 	// Si un fichier est bien uploadé, on l'ajoute à la liste
 	function callback(id, ext) {
 		$.ajax({
@@ -197,16 +197,16 @@
 			success: function(result) {
 				// On détruit la fenetre de load
 				$("#load").remove();
-			
+
 				if (result.exists) {
 					// Ajout d'une ligne
 					$("#tabPieceJointe tbody").prepend(result.html);
-					
+
 					// Mise à jour
 					$("#listePieceJointe table").trigger("update");
 					$("#listePieceJointe table").trigger("sorton", [[3,1]]);
 				}
-				
+
 				$("#listePieceJointe").show();
 				$("#listePieceJointe-no").hide();
 			}
