--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -6,6 +6,10 @@
         <a href='/admin' ><em class="icon-exclamation-sign icon-black"></em> Informations</a>
     </li>
 
+    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'retablir') echo "class='active'" ?> >
+        <a href='/retablir' ><em class="icon-ok icon-black"></em> Gestion des éléments supprimés</a>
+    </li>
+
     <li class="nav-header">Gestion des entités</li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'users') echo "class='active'" ?> >
@@ -52,10 +56,6 @@
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'changement') echo "class='active'" ?> >
         <a href='/changement' ><em class="icon-th-list icon-black"></em> Messages des alertes</a>
-    </li>
-
-    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'retablir') echo "class='active'" ?> >
-        <a href='/retablir' ><em class="icon-ok icon-black"></em> Rétablir</a>
     </li>
 </ul>
 
